# konfusion

./: .containerignore  .gitignore  Containerfile  DESIGN.md  Makefile  README.md  pyproject.toml  requirements-build.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml  ubi.repo
.tekton/: konfusion-pull-request.yaml  konfusion-push.yaml
src/konfusion/: cli.py  logs.py  main.py
src/konfusion/cmd/: apply_tags.py
src/konfusion/lib/: imageref.py  retry.py
src/konfusion/lib/tools/: __init__.py  _cli_tool.py  skopeo.py
tests/integration/: conftest.py
tests/integration/test_build_commands/: test_apply_tags.py
tests/lib/tools/: test_cli_tool.py
tests/test_lib/: test_imageref.py  test_retry.py
