[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "konfusion"
version = "0.1.0.dev1"
description = "Konflux Fusion. CLI for implementing CI tasks. No confusion."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Adam Cmiel", email = "acmiel@redhat.com"},
]
dependencies = [
    "stamina>=25.1.0",
]

[project.optional-dependencies]
build-commands = ["konfusion-build-commands"]

[project.scripts]
konfusion = "konfusion.main:main"


[dependency-groups]
dev = [
    "bcrypt>=4.3.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "konfusion-test-utils",
    "pybuild-deps>=0.5.0",
    "pip<25.1", # pybuild-deps==0.5.0 doesn't work with pip>=25.1
    "rpm-lockfile-prototype",
]


[tool.uv.sources]
konfusion = {workspace = true}
konfusion-build-commands = {workspace = true}
konfusion-test-utils = {workspace = true}
rpm-lockfile-prototype = { url = "https://github.com/konflux-ci/rpm-lockfile-prototype/archive/refs/tags/v0.17.0.tar.gz" }

[tool.uv.workspace]
members = ["packages/*"]


[tool.pyright]
# https://microsoft.github.io/pyright/#/configuration
typeCheckingMode = "strict"


[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "DTZ",  # flake8-datetimez
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "I",    # isort
    "N",    # pep8-naming
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "F",    # pyflakes
    "PLE",  # pylint error
    "PLW",  # pylint warning
    "UP",   # pyupgrade
    "RUF",  # ruff
]
ignore = [
    "E501", # line-too-long (auto-formatting takes care of the cases we care about)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101", # assert
]
"packages/konfusion-test-utils/*" = [
    "S603", # subprocess usage
    "S607", # partial executable path
]

[tool.ruff.lint.isort]
required-imports = [
    # Enable deferred evaluation of annotations. This avoids the need for importing
    # all types at runtime and the need for "stringifying" some annotations.
    "from __future__ import annotations",
]


[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--ignore=packages/konfusion-test-utils"]
log_format = "%(asctime)s [%(levelname)-8s] %(message)s"
